--- a/hiringplots.ipynb
+++ b/hiringplots.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
     "sns.despine(left=True, bottom=True)\n",
     "plt.axis(['2020-02-01', '2021-04-16', -40, 20])\n",
     "#plt.show()\n",
-    "plt.savefig('hiringplot.png')"
+    "plt.savefig('hiringplot.svg')"
    ]
   },
   {
